2019-04-28  Mark Wielaard  <mark@klomp.org>

	* eblsymbolbindingname.c (ebl_symbol_binding_name): Check ebl is
	not NULL for STB_GNU_UNIQUE.
	* eblsymboltypename.c (ebl_symbol_type_name): Check ebl is not
	NULL for STT_GNU_IFUNC.

2019-01-29  Mark Wielaard  <mark@klomp.org>

	* eblobjnote.c (ebl_object_note): Check pr_datasz padding doesn't
	overflow descsz.

2019-01-16  Mark Wielaard  <mark@klomp.org>

	* libebl.h (ebl_core_note): Add desc as argument.
	* eblcorenote.c (ebl_core_note): Take desc as an argument, check
	it contains a zero terminated string if it is an NT_PLATFORM note.

2019-01-16  Mark Wielaard  <mark@klomp.org>

	* eblobjnte.c (ebl_object_note): Check pr_datasz isn't too large.

2018-12-02  Mark Wielaard  <mark@klomp.org>

	* eblobjnte.c (ebl_object_note): For GNU_PROPERTY_STACK_SIZE use
	an Elf32_Addr or Elf64_Addr to read and print the size.

2018-11-15  Mark Wielaard  <mark@klomp.org>

	* eblobjnotetypename.c (ebl_object_note_type_name): Don't update
	w, t and len unnecessarily.

2018-11-12  Mark Wielaard  <mark@klomp.org>

	* libebl.h (ebl_object_note): Add new argument namesz.
	* eblobjnote.c (ebl_object_note): Likewise and handle GNU Build
	Attribute notes.
	* eblobjnotetypename.c (ebl_object_note_type_name): Handle GNU
	Build Attribute notes.

2018-11-11  Mark Wielaard  <mark@klomp.org>

	* eblobjnote.c (ebl_object_note): Recognize NT_VERSION with zero
	descriptor. Add explicit "GNU" name check.
	* eblobjnotetypename.c (ebl_object_note_type_name): Add extra
	argument descsz. Recognize NT_VERSION using descsz. With "GNU"
	name it is  NT_GNU_ABI_TAG.
	* libebl.h (ebl_object_note_type_name): Add extra argument descsz.

2018-10-18  Mark Wielaard  <mark@klomp.org>

	* eblobjnote.c (ebl_object_note): Handle NT_GNU_PROPERTY_TYPE_0.
	* eblobjnotetypename.c (ebl_object_note_type_name): Add
	GNU_PROPERTY_TYPE_0.

2018-10-02  Andreas Schwab  <schwab@suse.de>

	* ebl-hooks.h (EBLHOOK(reloc_simple_type)): Add third parameter.